feat: car base api
