# car/openapi.yaml
@@ -7,6 +7,35 @@ info:
     version: 0.0.1
 paths:
     /car:
+        get:
+            tags:
+                - Car
+            operationId: Car_GetCar
+            parameters:
+                - name: id
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+                - name: name
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetCarReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /car/create:
         post:
             tags:
                 - Car
@@ -55,32 +84,16 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/Status'
     /car/list:
-        get:
+        post:
             tags:
                 - Car
             operationId: Car_ListCar
-            parameters:
-                - name: carId
-                  in: query
-                  schema:
-                    type: integer
-                    format: int64
-                - name: carName
-                  in: query
-                  schema:
-                    type: string
-                - name: createTime.seconds
-                  in: query
-                  description: Represents seconds of UTC time since Unix epoch 1970-01-01T00:00:00Z. Must be from 0001-01-01T00:00:00Z to 9999-12-31T23:59:59Z inclusive.
-                  schema:
-                    type: integer
-                    format: int64
-                - name: createTime.nanos
-                  in: query
-                  description: Non-negative fractions of a second at nanosecond resolution. Negative second values with fractions must still have non-negative nanos values that count forward in time. Must be from 0 to 999,999,999 inclusive.
-                  schema:
-                    type: integer
-                    format: int32
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/ListCarRequest'
+                required: true
             responses:
                 "200":
                     description: OK
@@ -94,39 +107,33 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /car/update:
+        post:
+            tags:
+                - Car
+            operationId: Car_UpdateCar
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/UpdateCarRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UpdateCarReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
 components:
     schemas:
-        CreateCarReply:
-            type: object
-            properties:
-                car_id:
-                    type: integer
-                    format: int64
-        CreateCarRequest:
-            type: object
-            properties:
-                carName:
-                    type: string
-                carModel:
-                    type: string
-                carPhoto:
-                    type: string
-                    format: bytes
-        GoogleProtobufAny:
-            type: object
-            properties:
-                '@type':
-                    type: string
-                    description: The type of the serialized message.
-            additionalProperties: true
-            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        HelloReply:
-            type: object
-            properties:
-                message:
-                    type: string
-            description: The response message containing the greetings
-        ListCarReply:
+        CarReply:
             type: object
             properties:
                 carId:
@@ -145,6 +152,62 @@ components:
                     type: object
                     additionalProperties:
                         type: string
+        CreateCarReply:
+            type: object
+            properties:
+                car_id:
+                    type: integer
+                    format: int64
+        CreateCarRequest:
+            type: object
+            properties:
+                carName:
+                    type: string
+                carModel:
+                    type: string
+                carPhoto:
+                    type: string
+                    format: bytes
+        GetCarReply:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+                name:
+                    type: string
+        GoogleProtobufAny:
+            type: object
+            properties:
+                '@type':
+                    type: string
+                    description: The type of the serialized message.
+            additionalProperties: true
+            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        HelloReply:
+            type: object
+            properties:
+                message:
+                    type: string
+            description: The response message containing the greetings
+        ListCarReply:
+            type: object
+            properties:
+                list:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/CarReply'
+        ListCarRequest:
+            type: object
+            properties:
+                carId:
+                    type: integer
+                    format: int64
+                carName:
+                    type: string
+                createTime:
+                    type: string
+                    format: date-time
         Status:
             type: object
             properties:
@@ -161,5 +224,18 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        UpdateCarReply:
+            type: object
+            properties:
+                name:
+                    type: string
+        UpdateCarRequest:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+                name:
+                    type: string
 tags:
     - name: Car
